<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".EntreeFragment">

    <data>

        <variable
            name="entreeFragment"
            type="com.example.lunchtray.EntreeFragment" />

        <variable
            name="viewModel"
            type="com.example.lunchtray.model.OrderViewModel" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <RadioGroup
                android:id="@+id/entree_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <RadioButton
                    android:id="@+id/entree_0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="@{viewModel.entree.equals(viewModel.entrees[0])}"
                    android:onClick="@{() -> viewModel.setEntree(viewModel.entrees[0])}"
                    android:text="@{viewModel.entrees[0].name}"
                    tools:text="Cauliflower" />

                <TextView
                    android:id="@+id/ing_0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@{viewModel.entrees[0].ingredients}"
                    tools:text="Ingredients" />

                <TextView
                    android:id="@+id/price_0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="8dp"
                    android:text="@{viewModel.getPriceWithCurrency(viewModel.entrees[0].price)}"
                    tools:text="7.0" />

                <View
                    android:id="@+id/horizontal_line_d0"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    android:background="?attr/dividerHorizontal"
                    app:layout_constraintTop_toBottomOf="@+id/price_0" />

                <RadioButton
                    android:id="@+id/entree_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="@{viewModel.entree.equals(viewModel.entrees[1])}"
                    android:onClick="@{() -> viewModel.setEntree(viewModel.entrees[1])}"
                    android:text="@{viewModel.entrees[1].name}" />

                <TextView
                    android:id="@+id/ing_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@{viewModel.entrees[1].ingredients}" />

                <TextView
                    android:id="@+id/price_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="8dp"
                    android:text="@{viewModel.getPriceWithCurrency(viewModel.entrees[1].price)}" />

                <View
                    android:id="@+id/horizontal_line_d1"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    android:background="?attr/dividerHorizontal"
                    app:layout_constraintTop_toBottomOf="@+id/price_1" />

                <RadioButton
                    android:id="@+id/entree_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="@{viewModel.entree.equals(viewModel.entrees[2])}"
                    android:onClick="@{() -> viewModel.setEntree(viewModel.entrees[2])}"
                    android:text="@{viewModel.entrees[2].name}" />

                <TextView
                    android:id="@+id/ing_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@{viewModel.entrees[2].ingredients}" />

                <TextView
                    android:id="@+id/price_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="8dp"
                    android:text="@{viewModel.getPriceWithCurrency(viewModel.entrees[2].price)}" />

                <View
                    android:id="@+id/horizontal_line_d2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    android:background="?attr/dividerHorizontal"
                    app:layout_constraintTop_toBottomOf="@+id/price_2" />

                <RadioButton
                    android:id="@+id/entree_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="@{viewModel.entree.equals(viewModel.entrees[3])}"
                    android:onClick="@{() -> viewModel.setEntree(viewModel.entrees[3])}"
                    android:text="@{viewModel.entrees[3].name}" />

                <TextView
                    android:id="@+id/ing_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@{viewModel.entrees[3].ingredients}" />

                <TextView
                    android:id="@+id/price_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="8dp"
                    android:text="@{viewModel.getPriceWithCurrency(viewModel.entrees[3].price)}" />

                <View
                    android:id="@+id/horizontal_line_d3"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    android:background="?attr/dividerHorizontal"
                    app:layout_constraintTop_toBottomOf="@+id/price_3" />
            </RadioGroup>

            <TextView
                android:id="@+id/subtotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@{@string/subtotal(viewModel.price)}"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/entree_radio_group" />

            <Button
                android:id="@+id/cancel_button"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:onClick="@{() -> entreeFragment.cancelOrder()}"
                android:text="@string/cancel"
                app:layout_constraintEnd_toStartOf="@+id/next_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/subtotal" />

            <Button
                android:id="@+id/next_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:onClick="@{() -> entreeFragment.nextScreen()}"
                android:text="@string/next"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cancel_button"
                app:layout_constraintTop_toBottomOf="@id/subtotal" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>