<resources>
    <string name="app_name">Lunch Tray</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_order">Start order</string>
    <string name="subtotal">Subtotal: %s</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="order_summary">ORDER SUMMARY</string>
    <string name="submit_order">Submit order</string>
    <string name="cancel_summary">Cancel</string>
    <string name="tax">Tax: %s</string>
    <string name="total">TOTAL: %s</string>
</resources>