<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".StartOrderFragment">

    <data>

        <variable
            name="startOrderFragment"
            type="com.example.lunchtray.StartOrderFragment" />

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/start_order_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="@{() -> startOrderFragment.nextScreen() }"
            android:text="@string/start_order" />
    </FrameLayout>
</layout>